# slack-api-client

./: Cargo.toml  README.md
cli/: Cargo.toml  README.md
cli/src/: main.rs
src/: client.rs  command.rs  error.rs  lib.rs  message.rs  message_builder.rs  user.rs
