[package]
name = "slack-api-client"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = """
slack api client

Project homepage: https://github.com/isaacadams/slack-api-client
"""
readme = "README.md"
homepage = "https://github.com/isaacadams/slack-api-client"
repository = "https://github.com/isaacadams/slack-api-client"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.21"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
