[package]
name = "slack-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "slack"
path = "src/main.rs"

[dependencies]
clap = { version= "4.5", features = ["derive"] }
dotenvy = "0.15"
log = "0.4"
serde_json = "1"
slack-api-client = { path = "..", version = "0.1.93" }
tokio = { version = "1", features = ["macros", "parking_lot", "rt-multi-thread"] }
env_logger = "0.11.5"
